# face_protecter

./: .gitignore  LICENSE  README.md  README_JA_face_mosaic.md  cu130  detect_uv_profile.py  face_mosaic_streamlit_app.py  pyproject.toml  requirements.txt  run_app.ps1  run_app.sh  setup_uv.bat  setup_uv.ps1  setup_uv.sh  setup_uv_env.ps1  setup_uv_env.sh  train_face_detector.py  train_uv.ps1  train_uv.sh  uv_runtime_common.sh  verify_torch_env.py
data/: data.yaml
data/_generated/: full_data.yaml  smoke_data.yaml  smoke_train.txt  smoke_val.txt
models/: README.md
