[project]
name = "yolo11-face-mosaic-app"
version = "0.1.0"
description = "Streamlit app for face detection with YOLO26-compatible weights and video mosaic processing."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "streamlit>=1.44",
  "ultralytics>=8.4.35",
  "opencv-python>=4.9",
  "numpy>=1.26",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu126 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu128 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu130 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
onnx = [
  "onnxruntime>=1.18.0",
]

[tool.uv]
package = false
conflicts = [
  [{ extra = "cpu" }, { extra = "cu126" }],
  [{ extra = "cpu" }, { extra = "cu128" }],
  [{ extra = "cpu" }, { extra = "cu130" }],
  [{ extra = "cu126" }, { extra = "cu128" }],
  [{ extra = "cu126" }, { extra = "cu130" }],
  [{ extra = "cu128" }, { extra = "cu130" }],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
